--- a/test-output/index.html
+++ b/test-output/index.html
@@ -109,12 +109,12 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Open_Cart_Test_Regression_PW_Suite" title="com.qa.opencart.tests.HomePageTest" class="method navigator-link" hash-for-method="doSearchTest(macbook)">doSearchTest(macbook)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Open_Cart_Test_Regression_PW_Suite" title="com.qa.opencart.tests.HomePageTest" class="method navigator-link" hash-for-method="doSearchTest(iphone)">doSearchTest(iphone)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Open_Cart_Test_Regression_PW_Suite" title="com.qa.opencart.tests.HomePageTest" class="method navigator-link" hash-for-method="doSearchTest(iphone)">doSearchTest(iphone)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Open_Cart_Test_Regression_PW_Suite" title="com.qa.opencart.tests.HomePageTest" class="method navigator-link" hash-for-method="doSearchTest(macbook)">doSearchTest(macbook)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -191,18 +191,18 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="doSearchTest(macbook)">
-                  </a> <!-- doSearchTest(macbook) -->
-                  <span class="method-name">doSearchTest</span>
-                  <span class="parameters">(macbook)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="doSearchTest(iphone)">
                   </a> <!-- doSearchTest(iphone) -->
                   <span class="method-name">doSearchTest</span>
                   <span class="parameters">(iphone)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="doSearchTest(macbook)">
+                  </a> <!-- doSearchTest(macbook) -->
+                  <span class="method-name">doSearchTest</span>
+                  <span class="parameters">(macbook)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -296,42 +296,42 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(8);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'doSearchTest')
-data.setCell(0, 2, 'com.qa.opencart.tests.HomePageTest')
-data.setCell(0, 3, 11111);
+data.setCell(0, 1, 'appLoginTest')
+data.setCell(0, 2, 'com.qa.opencart.tests.LogInPageTest')
+data.setCell(0, 3, 5545);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'doSearchTest')
 data.setCell(1, 2, 'com.qa.opencart.tests.HomePageTest')
-data.setCell(1, 3, 10750);
+data.setCell(1, 3, 5466);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'doSearchTest')
 data.setCell(2, 2, 'com.qa.opencart.tests.HomePageTest')
-data.setCell(2, 3, 10504);
+data.setCell(2, 3, 5406);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'appLoginTest')
-data.setCell(3, 2, 'com.qa.opencart.tests.LogInPageTest')
-data.setCell(3, 3, 9666);
+data.setCell(3, 1, 'doSearchTest')
+data.setCell(3, 2, 'com.qa.opencart.tests.HomePageTest')
+data.setCell(3, 3, 5405);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'forgotPwdLinkExistTest')
 data.setCell(4, 2, 'com.qa.opencart.tests.LogInPageTest')
-data.setCell(4, 3, 5032);
+data.setCell(4, 3, 5031);
 data.setCell(5, 0, 5)
 data.setCell(5, 1, 'logInPageNavigationTest')
 data.setCell(5, 2, 'com.qa.opencart.tests.LogInPageTest')
-data.setCell(5, 3, 1658);
+data.setCell(5, 3, 522);
 data.setCell(6, 0, 6)
 data.setCell(6, 1, 'getHomePageTitleTest')
 data.setCell(6, 2, 'com.qa.opencart.tests.HomePageTest')
-data.setCell(6, 3, 69);
+data.setCell(6, 3, 42);
 data.setCell(7, 0, 7)
 data.setCell(7, 1, 'getHomePageURLTest')
 data.setCell(7, 2, 'com.qa.opencart.tests.HomePageTest')
-data.setCell(7, 3, 3);
+data.setCell(7, 3, 1);
 window.suiteTableData['Open_Cart_Test_Regression_PW_Suite']= { tableData: data, tableDiv: 'times-div-Open_Cart_Test_Regression_PW_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 53 seconds</span>
+              <span class="suite-total-time">Total running time: 37 seconds</span>
               <div id="times-div-Open_Cart_Test_Regression_PW_Suite">
               </div> <!-- times-div-Open_Cart_Test_Regression_PW_Suite -->
             </div> <!-- times-div -->
@@ -357,6 +357,13 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
+              <div class="chronological-class-name">com.qa.opencart.tests.HomePageTest</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- configuration-test before -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
               <div class="chronological-class-name">com.qa.opencart.tests.LogInPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">setUp</span>
@@ -365,67 +372,69 @@ return data;
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.qa.opencart.tests.HomePageTest</div> <!-- chronological-class-name -->
-              <div class="configuration-test before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">1 ms</span>
-              </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">getHomePageTitleTest</span>
-                <span class="method-start">20044 ms</span>
+                <span class="method-start">15041 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.qa.opencart.tests.LogInPageTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">logInPageNavigationTest</span>
-                <span class="method-start">20044 ms</span>
+                <span class="method-start">15041 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.qa.opencart.tests.HomePageTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">getHomePageURLTest</span>
-                <span class="method-start">20126 ms</span>
+                <span class="method-start">15094 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">doSearchTest(macbook)</span>
-                <span class="method-start">20135 ms</span>
+                <span class="method-start">15100 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.qa.opencart.tests.LogInPageTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">forgotPwdLinkExistTest</span>
-                <span class="method-start">21707 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">appLoginTest</span>
-                <span class="method-start">26742 ms</span>
+                <span class="method-start">15566 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.qa.opencart.tests.HomePageTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">doSearchTest(iphone)</span>
-                <span class="method-start">30640 ms</span>
+                <span class="method-start">20569 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.qa.opencart.tests.LogInPageTest</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">appLoginTest</span>
+                <span class="method-start">20599 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.qa.opencart.tests.HomePageTest</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">doSearchTest(samsung)</span>
+                <span class="method-start">25977 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.qa.opencart.tests.LogInPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">36410 ms</span>
+                <span class="method-start">26148 ms</span>
               </div> <!-- configuration-test after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.qa.opencart.tests.HomePageTest</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">doSearchTest(samsung)</span>
-                <span class="method-start">41753 ms</span>
-              </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">52504 ms</span>
+                <span class="method-start">31386 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
