--- a/test-output/old/Open Cart Test Regression PW Suite/methods.html
+++ b/test-output/old/Open Cart Test Regression PW Suite/methods.html
@@ -1,28 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Open Cart Test Regression PW Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="94beb9">  <td>24/09/04 02:38:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.doSearchTest(java.lang.String)[pri:3, instance:com.qa.opencart.tests.HomePageTest@1ab06251]">doSearchTest</td> 
-  <td>TestNG-tests-1@1825445620</td>   <td></td> </tr>
-<tr bgcolor="94beb9">  <td>24/09/04 02:38:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.doSearchTest(java.lang.String)[pri:3, instance:com.qa.opencart.tests.HomePageTest@1ab06251]">doSearchTest</td> 
-  <td>TestNG-tests-1@1825445620</td>   <td></td> </tr>
-<tr bgcolor="94beb9">  <td>24/09/04 02:37:54</td>   <td>-21709</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.getHomePageTitleTest()[pri:1, instance:com.qa.opencart.tests.HomePageTest@1ab06251]">getHomePageTitleTest</td> 
-  <td>TestNG-tests-1@1825445620</td>   <td></td> </tr>
-<tr bgcolor="94beb9">  <td>24/09/04 02:37:54</td>   <td>-21627</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.getHomePageURLTest()[pri:2, instance:com.qa.opencart.tests.HomePageTest@1ab06251]">getHomePageURLTest</td> 
-  <td>TestNG-tests-1@1825445620</td>   <td></td> </tr>
-<tr bgcolor="94beb9">  <td>24/09/04 02:38:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.doSearchTest(java.lang.String)[pri:3, instance:com.qa.opencart.tests.HomePageTest@1ab06251]">doSearchTest</td> 
-  <td>TestNG-tests-1@1825445620</td>   <td></td> </tr>
-<tr bgcolor="a7ed7f">  <td>24/09/04 02:38:27</td>   <td>10752</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.HomePageTest@1ab06251]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1825445620</td>   <td></td> </tr>
-<tr bgcolor="a7ed7f">  <td>24/09/04 02:37:34</td>   <td>-41750</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.qa.opencart.tests.HomePageTest@1ab06251]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1825445620</td>   <td></td> </tr>
-<tr bgcolor="98ab7f">  <td>24/09/04 02:37:56</td>   <td>-20046</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogInPageTest.forgotPwdLinkExistTest()[pri:2, instance:com.qa.opencart.tests.LogInPageTest@4ff8d125]">forgotPwdLinkExistTest</td> 
-  <td>TestNG-tests-2@212011969</td>   <td></td> </tr>
-<tr bgcolor="98ab7f">  <td>24/09/04 02:37:54</td>   <td>-21709</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogInPageTest.logInPageNavigationTest()[pri:1, instance:com.qa.opencart.tests.LogInPageTest@4ff8d125]">logInPageNavigationTest</td> 
-  <td>TestNG-tests-2@212011969</td>   <td></td> </tr>
-<tr bgcolor="a7ed7f">  <td>24/09/04 02:37:34</td>   <td>-41750</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.qa.opencart.tests.LogInPageTest@4ff8d125]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@212011969</td>   <td></td> </tr>
-<tr bgcolor="a7ed7f">  <td>24/09/04 02:38:11</td>   <td>-5342</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.LogInPageTest@4ff8d125]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@212011969</td>   <td></td> </tr>
-<tr bgcolor="98ab7f">  <td>24/09/04 02:38:01</td>   <td>-15011</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogInPageTest.appLoginTest()[pri:3, instance:com.qa.opencart.tests.LogInPageTest@4ff8d125]">appLoginTest</td> 
-  <td>TestNG-tests-2@212011969</td>   <td></td> </tr>
+<tr bgcolor="94beb9">  <td>24/09/05 01:20:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.doSearchTest(java.lang.String)[pri:3, instance:com.qa.opencart.tests.HomePageTest@1ab06251]">doSearchTest</td> 
+  <td>TestNG-tests-1@2130357594</td>   <td></td> </tr>
+<tr bgcolor="94beb9">  <td>24/09/05 01:20:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.doSearchTest(java.lang.String)[pri:3, instance:com.qa.opencart.tests.HomePageTest@1ab06251]">doSearchTest</td> 
+  <td>TestNG-tests-1@2130357594</td>   <td></td> </tr>
+<tr bgcolor="94beb9">  <td>24/09/05 01:20:34</td>   <td>-10883</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.getHomePageURLTest()[pri:2, instance:com.qa.opencart.tests.HomePageTest@1ab06251]">getHomePageURLTest</td> 
+  <td>TestNG-tests-1@2130357594</td>   <td></td> </tr>
+<tr bgcolor="a7ed7f">  <td>24/09/05 01:20:51</td>   <td>5410</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.HomePageTest@1ab06251]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@2130357594</td>   <td></td> </tr>
+<tr bgcolor="94beb9">  <td>24/09/05 01:20:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.doSearchTest(java.lang.String)[pri:3, instance:com.qa.opencart.tests.HomePageTest@1ab06251]">doSearchTest</td> 
+  <td>TestNG-tests-1@2130357594</td>   <td></td> </tr>
+<tr bgcolor="a7ed7f">  <td>24/09/05 01:20:19</td>   <td>-25974</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.qa.opencart.tests.HomePageTest@1ab06251]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@2130357594</td>   <td></td> </tr>
+<tr bgcolor="94beb9">  <td>24/09/05 01:20:34</td>   <td>-10937</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.getHomePageTitleTest()[pri:1, instance:com.qa.opencart.tests.HomePageTest@1ab06251]">getHomePageTitleTest</td> 
+  <td>TestNG-tests-1@2130357594</td>   <td></td> </tr>
+<tr bgcolor="a7ed7f">  <td>24/09/05 01:20:19</td>   <td>-25974</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.qa.opencart.tests.LogInPageTest@6d167f58]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@273077527</td>   <td></td> </tr>
+<tr bgcolor="a7ed7f">  <td>24/09/05 01:20:45</td>   <td>171</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.LogInPageTest@6d167f58]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@273077527</td>   <td></td> </tr>
+<tr bgcolor="d383e9">  <td>24/09/05 01:20:34</td>   <td>-10937</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogInPageTest.logInPageNavigationTest()[pri:1, instance:com.qa.opencart.tests.LogInPageTest@6d167f58]">logInPageNavigationTest</td> 
+  <td>TestNG-tests-2@273077527</td>   <td></td> </tr>
+<tr bgcolor="d383e9">  <td>24/09/05 01:20:35</td>   <td>-10411</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogInPageTest.forgotPwdLinkExistTest()[pri:2, instance:com.qa.opencart.tests.LogInPageTest@6d167f58]">forgotPwdLinkExistTest</td> 
+  <td>TestNG-tests-2@273077527</td>   <td></td> </tr>
+<tr bgcolor="d383e9">  <td>24/09/05 01:20:40</td>   <td>-5378</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogInPageTest.appLoginTest()[pri:3, instance:com.qa.opencart.tests.LogInPageTest@6d167f58]">appLoginTest</td> 
+  <td>TestNG-tests-2@273077527</td>   <td></td> </tr>
 </table>
