--- a/test-output/old/Open Cart Test Regression PW Suite/methods-alphabetical.html
+++ b/test-output/old/Open Cart Test Regression PW Suite/methods-alphabetical.html
@@ -1,28 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Open Cart Test Regression PW Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d383e9">  <td>24/09/05 01:20:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogInPageTest.appLoginTest()[pri:3, instance:com.qa.opencart.tests.LogInPageTest@6d167f58]">appLoginTest</td> 
-  <td>TestNG-tests-2@273077527</td>   <td></td> </tr>
-<tr bgcolor="94beb9">  <td>24/09/05 01:20:45</td>   <td>5378</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.doSearchTest(java.lang.String)[pri:3, instance:com.qa.opencart.tests.HomePageTest@1ab06251]">doSearchTest</td> 
-  <td>TestNG-tests-1@2130357594</td>   <td></td> </tr>
-<tr bgcolor="94beb9">  <td>24/09/05 01:20:45</td>   <td>5378</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.doSearchTest(java.lang.String)[pri:3, instance:com.qa.opencart.tests.HomePageTest@1ab06251]">doSearchTest</td> 
-  <td>TestNG-tests-1@2130357594</td>   <td></td> </tr>
-<tr bgcolor="94beb9">  <td>24/09/05 01:20:45</td>   <td>5378</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.doSearchTest(java.lang.String)[pri:3, instance:com.qa.opencart.tests.HomePageTest@1ab06251]">doSearchTest</td> 
-  <td>TestNG-tests-1@2130357594</td>   <td></td> </tr>
-<tr bgcolor="d383e9">  <td>24/09/05 01:20:35</td>   <td>-5033</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogInPageTest.forgotPwdLinkExistTest()[pri:2, instance:com.qa.opencart.tests.LogInPageTest@6d167f58]">forgotPwdLinkExistTest</td> 
-  <td>TestNG-tests-2@273077527</td>   <td></td> </tr>
-<tr bgcolor="94beb9">  <td>24/09/05 01:20:34</td>   <td>-5559</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.getHomePageTitleTest()[pri:1, instance:com.qa.opencart.tests.HomePageTest@1ab06251]">getHomePageTitleTest</td> 
-  <td>TestNG-tests-1@2130357594</td>   <td></td> </tr>
-<tr bgcolor="94beb9">  <td>24/09/05 01:20:34</td>   <td>-5505</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.getHomePageURLTest()[pri:2, instance:com.qa.opencart.tests.HomePageTest@1ab06251]">getHomePageURLTest</td> 
-  <td>TestNG-tests-1@2130357594</td>   <td></td> </tr>
-<tr bgcolor="d383e9">  <td>24/09/05 01:20:34</td>   <td>-5559</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogInPageTest.logInPageNavigationTest()[pri:1, instance:com.qa.opencart.tests.LogInPageTest@6d167f58]">logInPageNavigationTest</td> 
-  <td>TestNG-tests-2@273077527</td>   <td></td> </tr>
-<tr bgcolor="a7ed7f">  <td>24/09/05 01:20:19</td>   <td>-20596</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.qa.opencart.tests.HomePageTest@1ab06251]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@2130357594</td>   <td></td> </tr>
-<tr bgcolor="a7ed7f">  <td>24/09/05 01:20:19</td>   <td>-20596</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.qa.opencart.tests.LogInPageTest@6d167f58]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@273077527</td>   <td></td> </tr>
-<tr bgcolor="a7ed7f">  <td>24/09/05 01:20:51</td>   <td>10788</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.HomePageTest@1ab06251]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@2130357594</td>   <td></td> </tr>
-<tr bgcolor="a7ed7f">  <td>24/09/05 01:20:45</td>   <td>5549</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.LogInPageTest@6d167f58]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@273077527</td>   <td></td> </tr>
+<tr bgcolor="fea39d">  <td>24/09/05 01:47:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogInPageTest.appLoginTest()[pri:3, instance:com.qa.opencart.tests.LogInPageTest@7e5c856f]">appLoginTest</td> 
+  <td>TestNG-tests-2@335966014</td>   <td></td> </tr>
+<tr bgcolor="bc86a5">  <td>24/09/05 01:47:05</td>   <td>5256</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.doSearchTest(java.lang.String)[pri:3, instance:com.qa.opencart.tests.HomePageTest@341814d3]">doSearchTest</td> 
+  <td>TestNG-tests-1@434610767</td>   <td></td> </tr>
+<tr bgcolor="bc86a5">  <td>24/09/05 01:47:05</td>   <td>5256</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.doSearchTest(java.lang.String)[pri:3, instance:com.qa.opencart.tests.HomePageTest@341814d3]">doSearchTest</td> 
+  <td>TestNG-tests-1@434610767</td>   <td></td> </tr>
+<tr bgcolor="bc86a5">  <td>24/09/05 01:47:05</td>   <td>5256</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.doSearchTest(java.lang.String)[pri:3, instance:com.qa.opencart.tests.HomePageTest@341814d3]">doSearchTest</td> 
+  <td>TestNG-tests-1@434610767</td>   <td></td> </tr>
+<tr bgcolor="fea39d">  <td>24/09/05 01:46:55</td>   <td>-5030</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogInPageTest.forgotPwdLinkExistTest()[pri:2, instance:com.qa.opencart.tests.LogInPageTest@7e5c856f]">forgotPwdLinkExistTest</td> 
+  <td>TestNG-tests-2@335966014</td>   <td></td> </tr>
+<tr bgcolor="bc86a5">  <td>24/09/05 01:46:54</td>   <td>-6342</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.getHomePageTitleTest()[pri:1, instance:com.qa.opencart.tests.HomePageTest@341814d3]">getHomePageTitleTest</td> 
+  <td>TestNG-tests-1@434610767</td>   <td></td> </tr>
+<tr bgcolor="bc86a5">  <td>24/09/05 01:46:54</td>   <td>-6321</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.getHomePageURLTest()[pri:2, instance:com.qa.opencart.tests.HomePageTest@341814d3]">getHomePageURLTest</td> 
+  <td>TestNG-tests-1@434610767</td>   <td></td> </tr>
+<tr bgcolor="fea39d">  <td>24/09/05 01:46:53</td>   <td>-7051</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogInPageTest.logInPageNavigationTest()[pri:1, instance:com.qa.opencart.tests.LogInPageTest@7e5c856f]">logInPageNavigationTest</td> 
+  <td>TestNG-tests-2@335966014</td>   <td></td> </tr>
+<tr bgcolor="f3a5d8">  <td>24/09/05 01:46:34</td>   <td>-26069</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.qa.opencart.tests.HomePageTest@341814d3]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@434610767</td>   <td></td> </tr>
+<tr bgcolor="f3a5d8">  <td>24/09/05 01:46:34</td>   <td>-26069</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.qa.opencart.tests.LogInPageTest@7e5c856f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@335966014</td>   <td></td> </tr>
+<tr bgcolor="f3a5d8">  <td>24/09/05 01:47:11</td>   <td>10774</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.HomePageTest@341814d3]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@434610767</td>   <td></td> </tr>
+<tr bgcolor="f3a5d8">  <td>24/09/05 01:47:06</td>   <td>6251</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.LogInPageTest@7e5c856f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@335966014</td>   <td></td> </tr>
 </table>
