--- a/test-output/index.html
+++ b/test-output/index.html
@@ -109,12 +109,12 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Open_Cart_Test_Regression_PW_Suite" title="com.qa.opencart.tests.HomePageTest" class="method navigator-link" hash-for-method="doSearchTest(iphone)">doSearchTest(iphone)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Open_Cart_Test_Regression_PW_Suite" title="com.qa.opencart.tests.HomePageTest" class="method navigator-link" hash-for-method="doSearchTest(macbook)">doSearchTest(macbook)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Open_Cart_Test_Regression_PW_Suite" title="com.qa.opencart.tests.HomePageTest" class="method navigator-link" hash-for-method="doSearchTest(macbook)">doSearchTest(macbook)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Open_Cart_Test_Regression_PW_Suite" title="com.qa.opencart.tests.HomePageTest" class="method navigator-link" hash-for-method="doSearchTest(iphone)">doSearchTest(iphone)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -191,18 +191,18 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="doSearchTest(iphone)">
-                  </a> <!-- doSearchTest(iphone) -->
-                  <span class="method-name">doSearchTest</span>
-                  <span class="parameters">(iphone)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="doSearchTest(macbook)">
                   </a> <!-- doSearchTest(macbook) -->
                   <span class="method-name">doSearchTest</span>
                   <span class="parameters">(macbook)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="doSearchTest(iphone)">
+                  </a> <!-- doSearchTest(iphone) -->
+                  <span class="method-name">doSearchTest</span>
+                  <span class="parameters">(iphone)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -298,31 +298,31 @@ data.addRows(8);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'doSearchTest')
 data.setCell(0, 2, 'com.qa.opencart.tests.HomePageTest')
-data.setCell(0, 3, 6890);
+data.setCell(0, 3, 8905);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'appLoginTest')
 data.setCell(1, 2, 'com.qa.opencart.tests.LogInPageTest')
-data.setCell(1, 3, 6265);
+data.setCell(1, 3, 7493);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'doSearchTest')
-data.setCell(2, 2, 'com.qa.opencart.tests.HomePageTest')
-data.setCell(2, 3, 5990);
+data.setCell(2, 1, 'logInPageNavigationTest')
+data.setCell(2, 2, 'com.qa.opencart.tests.LogInPageTest')
+data.setCell(2, 3, 6982);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'doSearchTest')
 data.setCell(3, 2, 'com.qa.opencart.tests.HomePageTest')
-data.setCell(3, 3, 5678);
+data.setCell(3, 3, 5502);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'forgotPwdLinkExistTest')
-data.setCell(4, 2, 'com.qa.opencart.tests.LogInPageTest')
-data.setCell(4, 3, 5017);
+data.setCell(4, 1, 'doSearchTest')
+data.setCell(4, 2, 'com.qa.opencart.tests.HomePageTest')
+data.setCell(4, 3, 5388);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'logInPageNavigationTest')
+data.setCell(5, 1, 'forgotPwdLinkExistTest')
 data.setCell(5, 2, 'com.qa.opencart.tests.LogInPageTest')
-data.setCell(5, 3, 1013);
+data.setCell(5, 3, 5035);
 data.setCell(6, 0, 6)
 data.setCell(6, 1, 'getHomePageTitleTest')
 data.setCell(6, 2, 'com.qa.opencart.tests.HomePageTest')
-data.setCell(6, 3, 29);
+data.setCell(6, 3, 79);
 data.setCell(7, 0, 7)
 data.setCell(7, 1, 'getHomePageURLTest')
 data.setCell(7, 2, 'com.qa.opencart.tests.HomePageTest')
@@ -331,7 +331,7 @@ window.suiteTableData['Open_Cart_Test_Regression_PW_Suite']= { tableData: data, 
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 37 seconds</span>
+              <span class="suite-total-time">Total running time: 43 seconds</span>
               <div id="times-div-Open_Cart_Test_Regression_PW_Suite">
               </div> <!-- times-div-Open_Cart_Test_Regression_PW_Suite -->
             </div> <!-- times-div -->
@@ -374,61 +374,67 @@ return data;
               <div class="chronological-class-name">com.qa.opencart.tests.HomePageTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">getHomePageTitleTest</span>
-                <span class="method-start">18128 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">getHomePageURLTest</span>
-                <span class="method-start">18164 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">doSearchTest(macbook)</span>
-                <span class="method-start">18171 ms</span>
+                <span class="method-start">22037 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.qa.opencart.tests.LogInPageTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">logInPageNavigationTest</span>
-                <span class="method-start">19914 ms</span>
+                <span class="method-start">22079 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.qa.opencart.tests.HomePageTest</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">getHomePageURLTest</span>
+                <span class="method-start">22150 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
+                <span class="method-name">doSearchTest(macbook)</span>
+                <span class="method-start">22159 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.qa.opencart.tests.LogInPageTest</div> <!-- chronological-class-name -->
+              <div class="test-method">
                 <span class="method-name">forgotPwdLinkExistTest</span>
-                <span class="method-start">20928 ms</span>
+                <span class="method-start">29063 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.qa.opencart.tests.HomePageTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">doSearchTest(iphone)</span>
-                <span class="method-start">23852 ms</span>
+                <span class="method-start">31067 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.qa.opencart.tests.LogInPageTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">appLoginTest</span>
-                <span class="method-start">25946 ms</span>
+                <span class="method-start">34101 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.qa.opencart.tests.HomePageTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">doSearchTest(samsung)</span>
-                <span class="method-start">30744 ms</span>
+                <span class="method-start">36457 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.qa.opencart.tests.LogInPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">32214 ms</span>
+                <span class="method-start">41603 ms</span>
               </div> <!-- configuration-test after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.qa.opencart.tests.HomePageTest</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">36738 ms</span>
+                <span class="method-start">41962 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
